--- a/src/main.css
+++ b/src/main.css
@@ -4,6 +4,41 @@ body {
   padding: 0;
 }
 
+body {
+  position: relative;
+}
+
+.hidden {
+  display: none;
+}
+
+.hiddenInitial {
+  display: none;
+}
+
+.loader {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #ffffff;
+  font-size: 10em;
+  z-index: 1;
+}
+
+.loader__content {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.loader__content > i {
+  transform: translateY(0%);
+  animation: 1s ease-in-out jump infinite;
+}
+
 .container {
   display: flex;
   align-items: center;
@@ -145,5 +180,17 @@ i:nth-of-type(3n) {
   100% {
     transform: translateY(0%);
     opacity: 0;
+  }
+}
+
+@keyframes jump {
+  0% {
+    transform: translateY(0%);
+  }
+  50% {
+    transform: translateY(-200%);
+  }
+  100% {
+    transform: translateY(0%);
   }
 }
